x-overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,11 @@ CodXCryptCommunityOfficial
 html {
   font-family: sans-serif;
   line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 200%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 article,
@@ -73,6 +76,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
